--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,7 +6,7 @@ $font-poppins: "Poppins", sans-serif;
 $font-tienne: "Tienne", serif;
 $font-urbanist: "Urbanist", sans-serif;
 
-$blue-primary: #1b2131;
+$blue-primary: #192f51;
 $blue-variant2: rgba(27, 33, 49, 0.87);
 $blue-variant3: rgba(27, 33, 49, 0.68);
 $blue-variant4: rgba(27, 33, 49, 0.38);
@@ -24,7 +24,7 @@ $white-variant3: rgba(255, 255, 255, 0.38);
 $white-transparent: rgba(255, 255, 255, 0.04);
 
 body {
-  background: #1b2131;
+  background: #1b2845;
   color: $white-primary;
 }
 
