--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -123,3 +123,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none !important;
+  outline: 0 !important;
+}
