--- a/scss/_registration.scss
+++ b/scss/_registration.scss
@@ -65,91 +65,98 @@
       }
     }
   }
-  .form-container {
-    .form {
-      &-step {
-        @include body4;
-        color: $white-variant3;
-      }
-      &-title {
-        @include heading6;
-        color: $white-primary;
-        @media screen and (max-width: 576px) {
-          font-size: 15px;
-          line-height: 25px;
-          margin-bottom: 0;
-        }
-      }
-      &-instruction {
-        @include body4;
-        color: $white-variant3;
-      }
-      &-line {
-        color: rgba(255, 255, 255, 0.25);
-      }
-      &-section {
-        @include heading7;
-        color: $white-primary;
-        @media screen and (max-width: 576px) {
-          font-size: 15px;
-          line-height: 25px;
-          margin-bottom: 0;
-        }
-      }
-      &-label {
-        @include body2;
-        color: $white-primary;
-        @media screen and (max-width: 576px) {
-          @include body3;
-          margin-bottom: 0;
-        }
-      }
-      &-input {
-        margin: 0.5rem 0;
-        display: block;
-        width: 100%;
-        padding: 1rem 2rem;
-        background-color: transparent;
-        border: 1px solid rgba(255, 255, 255, 0.38);
-        box-sizing: border-box;
-        border-radius: 5px;
-        &::placeholder {
-          @include body4;
-          color: $white-variant3;
-        }
-        &:focus {
-          border: 1px solid rgba(44, 136, 87, 0.68);
-          &::placeholder {
-            color: $green-variant3;
-          }
-        }
-        @media screen and (max-width: 576px) {
-          @include body3;
-          padding: 0.5rem 1.5rem;
-        }
-      }
-      &-control {
-        margin: 0.5rem 0;
-        background-color: transparent;
-        border: 1px solid rgba(255, 255, 255, 0.38);
-        box-sizing: border-box;
-        border-radius: 5px;
-        @include body4;
-        color: $white-variant3;
-      }
-      &-button {
-        padding: 1rem 3rem;
-        font: 600 16px/16px $font-poppins;
-        letter-spacing: 0.003em;
-        color: $white-primary;
-        background-color: $green-primary;
-        border: none;
-        border-radius: 5px;
-        @media screen and (max-width: 576px) {
-          @include body3;
-          padding: 0.75rem 2rem;
-        }
+}
+.form {
+  &-step {
+    @include body4;
+    color: $white-variant3;
+  }
+  &-title {
+    @include heading6;
+    color: $white-primary;
+    @media screen and (max-width: 576px) {
+      font-size: 15px;
+      line-height: 25px;
+      margin-bottom: 0;
+    }
+  }
+  &-instruction {
+    @include body4;
+    color: $white-variant3;
+  }
+  &-line {
+    color: rgba(255, 255, 255, 0.25);
+  }
+  &-section {
+    @include heading7;
+    color: $white-primary;
+    @media screen and (max-width: 576px) {
+      font-size: 15px;
+      line-height: 25px;
+      margin-bottom: 0;
+    }
+  }
+  &-label {
+    position: relative;
+    margin-bottom: 0;
+    @include body2;
+    color: $white-primary;
+    @media screen and (max-width: 576px) {
+      @include body3;
+    }
+  }
+  &-input {
+    margin: 0.5rem 0 0;
+    display: block;
+    width: 100%;
+    padding: 1rem 2rem;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.38);
+    box-sizing: border-box;
+    border-radius: 5px;
+    &::placeholder {
+      @include body4;
+      color: $white-variant3;
+    }
+    &:focus {
+      border: 1px solid rgba(44, 136, 87, 0.68);
+      &::placeholder {
+        color: $green-variant3;
       }
     }
+    @media screen and (max-width: 576px) {
+      @include body3;
+      padding: 0.5rem 1.5rem;
+    }
+  }
+  &-control {
+    margin: 0.5rem 0;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.38);
+    box-sizing: border-box;
+    border-radius: 5px;
+    @include body4;
+    color: $white-variant3;
+  }
+  &-button {
+    padding: 1rem 3rem;
+    font: 600 16px/16px $font-poppins;
+    letter-spacing: 0.003em;
+    color: $white-primary;
+    background-color: $green-primary;
+    border: 1px solid $green-primary;
+    border-radius: 5px;
+    transition: ease-in-out 0.3s;
+    @media screen and (max-width: 576px) {
+      @include body3;
+      padding: 0.75rem 2rem;
+    }
+    &:hover {
+      background-color: transparent;
+      color: $green-primary;
+    }
+  }
+  &-link {
+    color: $green-primary;
   }
 }
