--- a/css/style.css
+++ b/css/style.css
@@ -613,6 +613,17 @@ p,
   color: rgba(255, 255, 255, 0.38);
 }
 
+.form-control:focus {
+  border: 1px solid rgba(44, 136, 87, 0.68);
+  outline: none !important;
+  background-color: transparent;
+  color: rgba(44, 136, 87, 0.68);
+}
+
+.form-control:focus::placeholder {
+  color: rgba(44, 136, 87, 0.68);
+}
+
 .form-button {
   padding: 1rem 3rem;
   font: 600 16px/16px "Poppins", sans-serif;
