--- a/css/style.css
+++ b/css/style.css
@@ -653,6 +653,44 @@ p,
   color: #2c8857;
 }
 
+a.payment-button {
+  color: #2c8857;
+}
+
+a.payment-button:hover {
+  color: #2c8857;
+}
+
+a.payment-button .payment-chevron {
+  transform: rotate(270deg);
+}
+
+.payment {
+  width: 100%;
+  height: 130px;
+  background-color: rgba(255, 255, 255, 0.38);
+  border-radius: 4px;
+}
+
+.payment-logo {
+  width: 75px;
+  max-width: 100%;
+}
+
+.payment-target {
+  font: normal 14px/14px "Poppins", sans-serif;
+  text-align: center;
+  letter-spacing: 0.003em;
+  color: rgba(255, 255, 255, 0.87);
+}
+
+.payment-name {
+  font: normal 12px/12px "Poppins", sans-serif;
+  text-align: center;
+  letter-spacing: 0.003em;
+  color: rgba(255, 255, 255, 0.68);
+}
+
 #loginPage {
   padding-top: 72px;
   position: relative;
