--- a/scss/_registration.scss
+++ b/scss/_registration.scss
@@ -169,3 +169,34 @@
     color: $green-primary;
   }
 }
+a.payment-button {
+  color: $green-primary;
+  &:hover {
+    color: $green-primary;
+  }
+  .payment-chevron {
+    transform: rotate(270deg);
+  }
+}
+.payment {
+  width: 100%;
+  height: 130px;
+  background-color: $white-variant3;
+  border-radius: 4px;
+  &-logo {
+    width: 75px;
+    max-width: 100%;
+  }
+  &-target {
+    font: normal 14px/14px $font-poppins;
+    text-align: center;
+    letter-spacing: 0.003em;
+    color: $white-primary;
+  }
+  &-name {
+    font: normal 12px/12px $font-poppins;
+    text-align: center;
+    letter-spacing: 0.003em;
+    color: $white-variant2;
+  }
+}
