--- a/css/style.css
+++ b/css/style.css
@@ -649,6 +649,15 @@ p,
   color: #2c8857;
 }
 
+.form-button.disabled {
+  filter: grayscale(0.5);
+}
+
+.form-button.disabled:hover {
+  background-color: #2c8857;
+  color: rgba(255, 255, 255, 0.87);
+}
+
 .form-link {
   color: #2c8857;
 }
